--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,6 +28,8 @@ android {
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
+        // ✅ Add this line for Google Maps API Key
+        // manifestPlaceholders["MAPS_API_KEY"] = project.hasProperty('MAPS_API_KEY') ? project.MAPS_API_KEY : ""
     }
 
     buildTypes {
