--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_maps_flutter: ^2.11.0
   flutter_launcher_icons: ^0.14.3
+  flutter_dotenv: ^5.2.1
   
 
 dev_dependencies:
